# pklpo

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  DATA_FLOW.md  ENGINEERING_GUIDE.md  Makefile  README.md  ROADMAP.md  TARGET_ARCHITECTURE.md  conftest_shim.py  feature_registry.yaml  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: ci.yml
Captains_Logbook/investigations/: features-prune-baseline.md
agent_workspace/hooks/: check_prompt.py  config.json  enrich_prompt.py  post_tool_validate.py  turn_summary.py
agent_workspace/skills/: manifest.yaml
agents/: ANALYSIS.md  build-error-resolver.md  doc-updater.md  e2e-runner.md  refactor-cleaner.md  tdd-guide.md
benchmarks/results/: baseline_20260302.json  baseline_20260302_10000.json  group_baseline_20260302.json  pytest_benchmark.json
config/: README.md  mtf_phase3.yaml  mtf_phase3_development.yaml  mtf_phase3_production.yaml
docker/: Dockerfile.app
docs/: ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  DATA_FLOW.md  DEPENDENCIES.md  ENGINEERING_GUIDE.md  MENTAL_MODEL.md  ROADMAP.md  TRADING_GLOSSARY.md  agent-workspace.md  cursor-baseline.md  how_to_plan.md  okx_swap_repair_v1_plan_vs_actual.md
docs/adr/: ADR-2026-05-03-last-n-closed-bars.md  ADR-2026-05-14-swap-ohlcv-utc-storage-calendar.md
docs/operator-guide/: partial-auto-apply.md
history/done/: okx_swap_repair_v1_plan_vs_actual.md
history/planning/: okx_swap_repair_semantics_redesign_plan_2026-04-21.md  okx_swap_repair_unified_2026-04-18.md
ops/airflow/: .dockerignore  AUTOSTART_SETUP.md  AUTOSTART_WITHOUT_DOCKER.md  Dockerfile.airflow  HOW_TO_PASS_PARAMS.md  MONITORING_PROGRESS.md  QUICK_FIX.md  README.md  README_FIX.md  TROUBLESHOOTING.md  check_airflow.ps1  dag_conf.json  dag_conf_examples.json  docker-compose.airflow.yml  requirements-airflow.txt
ops/monitoring/: LOGS_RUNBOOK.md  OPERATOR_GUIDE.md  README.md  docker-compose.monitoring.yml
plan/: ROADMAP.md  candles_update_idea.md  quantitative_plan.md  quantitative_trading_strategy_infrastructure_and_risk_management.md  Резюме исполнительного проекта (Executive Summary).md
rules/: patterns.md
scripts/: COMPLETION_SUMMARY.txt  CURSOR_IDE_IMPROVEMENTS.md  SETUP_PRE_COMMIT.md  add_data_status_column.sql  add_failed_groups_column.sql  add_hl2_column.sql  add_ics_26_column.py  add_ics_26_column.sql  add_missing_columns.py  add_missing_columns.sql  add_missing_columns_fix.py  add_missing_indicator_fields.py  add_stage_a_columns.py  add_stage_b_columns.py  add_stage_c_columns.py  add_stage_d_columns.py  add_stage_e_columns.py  add_supertrend_psar_columns.py  analyze_null_indicators.py  audit_indicators_from_logs.py  bootstrap.ps1  check_all_stages.py  check_before_commit.ps1  check_columns.py  check_columns_simple.py  check_data_stats.py  check_database_connection.py  check_empty_columns.py  check_empty_columns.sql  check_features_short_freshness.sql  check_indicators.sql  check_indicators_columns.py  check_language_policy.py  check_null_indicators.py  check_pr_ci.ps1  check_timestamp_coverage.py  check_types.py  checklist_simple.py  checklist_verification.py  cleanup_deprecated_indicator_columns.py  (+77 more)
skills/: manifest.yaml
skills/_common/: README.md  generate-checksums.sh  security.sh
skills/ai-skill-practices/: SKILL.md
skills/backend-patterns/: SKILL.md
skills/clickhouse-io/: SKILL.md
skills/coding-standards/: SKILL.md
skills/continuous-learning/: SKILL.md  config.json  evaluate-session.sh
skills/eval-harness/: SKILL.md
skills/frontend-patterns/: SKILL.md
skills/project-guidelines-example/: SKILL.md
skills/security-review/: SKILL.md
skills/strategic-compact/: SKILL.md  suggest-compact.sh
skills/tdd-workflow/: SKILL.md
skills/verification-loop/: SKILL.md
src/: FEATURES_DEPENDENCIES.md  README.md  calc.py  calc_signals.py  core.py  database.py  fetch_instruments.py  fetch_swap_instruments.py  limiter.py  logging_config.py  main_v2.py  main_with_options (старая версия).py  migrate_create_instruments.py  models.py  mtf_integration_cli.py  optimize_parameters.py  strategy.py
src/alerts/: README.md  __init__.py  slack_webhook.py
src/backtest/: README.md  __init__.py  evaluate.py  metrics.py  report.py
src/candles/: README.md  __init__.py  api.py  bootstrap.py  candles_cli_service.py  ccxt_okx_adapter.py  database.py  instruments_list.json  instruments_service.py  load_instruments.py  logging.yaml  parity_check.py  ports.py  repository.py  swap_cli.py  sync_candles.py  sync_policy.py  sync_runtime.py  sync_swap_candles.py  update_instruments_list.py
src/cli/: main.py
src/config/: __init__.py  env_validator.py  example_migration.py  settings.py
src/core/: __init__.py  bars.py  run_context.py
src/db/: DEVELOPER_CHECKLIST.md  INDEX.md  README.md  db_schema_utils.py  migrate_add_data_constraints.py  migrate_add_data_retention.py  migrate_add_ema200.py  migrate_add_indexes.py  migrate_add_missing_ma_columns.py  migrate_add_ohlcv_to_indicators.py  migrate_add_swap_fields.py  migrate_create_combination_features.py  migrate_create_data_quality_metrics.py  migrate_create_indicators_partitioned.py  migrate_create_mtf_signals.py  migrate_create_mtf_v2_tables.py  migrate_create_positions.py  migrate_create_score_results.py  migrate_create_signals.py  migrate_create_signals_detailed.py  migrate_create_swap_ohlcv.py  migrate_data_cleanup.py  migrate_fix_instrument_columns.py  migrate_materialized_views.py  migrate_monitoring_metrics.py  migrate_phase3_quant_tables.py  migration_registry.py  migration_reports.py  (+6 more)
tests/: __init__.py  conftest.py  test_batch_builder_contracts.py  test_batch_sizing_property.py  test_feature_contracts.py  test_features_backend_settings.py  test_market_meta_quality_phase1.py  test_okx_settings.py  test_phase1_blocks.py  test_stdlib_platform_import.py  test_ta_safe_lazy_init.py  test_talib_bridge_dispatch.py  test_upsert_idempotency.py  test_validators_property.py
tools/: dead_module_detector.py
(+1348 files in other folders)
